# WebPdf

./: .gitignore  .gitmodules  CMakeLists.txt
libsrc/: clsPdfDocument.cpp  clsPdfDocument.h  common.h  stuMarkableSegment.h
libsrc/Private/: ParagraphAndSentenceManager.cpp  ParagraphAndSentenceManager.h  clsBezierCurve.cpp  clsBezierCurve.h  clsColumn.cpp  clsColumn.h  clsLayoutAnalyzer.cpp  clsLayoutAnalyzer.h  clsLayoutStorage.cpp  clsLayoutStorage.h  clsPdfBlock.cpp  clsPdfBlock.h  clsPdfChar.cpp  clsPdfChar.h  clsPdfFont.cpp  clsPdfFont.h  clsPdfItem.cpp  clsPdfItem.h  clsPdfLineSegment.cpp  clsPdfLineSegment.h  clsPdfiumWrapper.cpp  clsPdfiumWrapper.h  common.cpp  common.h
libsrc/Private/LayoutAnalysis/: BlockCreation.cpp  BlockCreation.h  BulletAndNumbering.cpp  BulletAndNumbering.h  HeaderFooterAndSideBar.cpp  HeaderFooterAndSideBar.h  LACommon.cpp  LACommon.h  PdfLineSegmentManager.cpp  PdfLineSegmentManager.h  Stamping.cpp  Stamping.h  SubBlockMarking.cpp  SubBlockMarking.h
wasm/: interface.cpp  post.js
wcomp/: build.sh
wcomp/src/: clsTargomanPdfViewer.css  clsTargomanPdfViewer.mjs
wcomp/src/modules/: UI.mjs  clsEventTarget.mjs  clsPdfDocumentViewer.mjs  clsTargomanPdfDocumentInterface.mjs  clsTargomanPdfViewerPrivate.mjs  common.mjs  l10n.mjs
wcomp/test/: index.html  webpdf.js  webpdf.wasm  webpdfui.min.css  webpdfui.min.js
